[gd_scene load_steps=35 format=2]

[ext_resource path="res://assets/portrait/surprised.png" type="Texture" id=1]
[ext_resource path="res://assets/portrait/sad.png" type="Texture" id=2]
[ext_resource path="res://assets/portrait/waffle.png" type="Texture" id=3]
[ext_resource path="res://assets/portrait/mandarin.png" type="Texture" id=4]
[ext_resource path="res://assets/portrait/eyes.png" type="Texture" id=5]
[ext_resource path="res://assets/portrait/caramel.png" type="Texture" id=6]
[ext_resource path="res://assets/portrait/liquorice.png" type="Texture" id=7]
[ext_resource path="res://assets/portrait/happy.png" type="Texture" id=8]
[ext_resource path="res://assets/portrait/chocolate.png" type="Texture" id=9]
[ext_resource path="res://assets/portrait/vanilla.png" type="Texture" id=10]
[ext_resource path="res://Person.gd" type="Script" id=11]
[ext_resource path="res://assets/portrait/scarf.png" type="Texture" id=12]
[ext_resource path="res://assets/portrait/hat.png" type="Texture" id=13]
[ext_resource path="res://assets/portrait/glasses.png" type="Texture" id=14]
[ext_resource path="res://assets/portrait/shirt.png" type="Texture" id=15]
[ext_resource path="res://assets/portrait/mouth2.png" type="Texture" id=16]
[ext_resource path="res://assets/portrait/mouth3.png" type="Texture" id=17]
[ext_resource path="res://assets/portrait/mouth4.png" type="Texture" id=18]
[ext_resource path="res://assets/portrait/mouth1.png" type="Texture" id=19]
[ext_resource path="res://assets/portrait/earrings2.png" type="Texture" id=20]
[ext_resource path="res://assets/portrait/earrings3.png" type="Texture" id=21]
[ext_resource path="res://assets/portrait/earrings1.png" type="Texture" id=22]
[ext_resource path="res://assets/portrait/earrings4.png" type="Texture" id=23]
[ext_resource path="res://assets/portrait/nose1.png" type="Texture" id=24]
[ext_resource path="res://assets/portrait/nose2.png" type="Texture" id=25]
[ext_resource path="res://assets/portrait/waffle2.png" type="Texture" id=26]
[ext_resource path="res://assets/portrait/waffle1.png" type="Texture" id=27]
[ext_resource path="res://assets/portrait/liquorice2.png" type="Texture" id=28]
[ext_resource path="res://assets/portrait/mandarin2.png" type="Texture" id=29]
[ext_resource path="res://assets/portrait/eye-recolor.png" type="Texture" id=30]
[ext_resource path="res://assets/portrait/scarf2.png" type="Texture" id=31]
[ext_resource path="res://assets/portrait/scarf1.png" type="Texture" id=32]
[ext_resource path="res://assets/portrait/hat2.png" type="Texture" id=33]
[ext_resource path="res://assets/portrait/liquorice3.png" type="Texture" id=34]

[node name="Person" type="Node2D"]
position = Vector2( -9, -43 )
scale = Vector2( 0.4, 0.4 )
script = ExtResource( 11 )

[node name="Vanilla" type="Sprite" parent="."]
texture = ExtResource( 10 )

[node name="Caramel" type="Sprite" parent="."]
texture = ExtResource( 6 )

[node name="Chocolate" type="Sprite" parent="."]
visible = false
texture = ExtResource( 9 )

[node name="Mandarin2" type="Sprite" parent="."]
visible = false
texture = ExtResource( 29 )

[node name="Mandarin" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )

[node name="Liquorice" type="Sprite" parent="."]
visible = false
texture = ExtResource( 7 )

[node name="Liquorice3" type="Sprite" parent="."]
visible = false
texture = ExtResource( 34 )

[node name="Liquorice2" type="Sprite" parent="."]
visible = false
texture = ExtResource( 28 )

[node name="Waffle" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="Waffle1" type="Sprite" parent="."]
texture = ExtResource( 27 )

[node name="Waffle2" type="Sprite" parent="."]
visible = false
texture = ExtResource( 26 )

[node name="Eyes" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="Eye-recolor1" type="Sprite" parent="."]
modulate = Color( 0.290196, 0.6, 0.145098, 1 )
texture = ExtResource( 30 )

[node name="Eye-recolor2" type="Sprite" parent="."]
modulate = Color( 0.352941, 0.588235, 1, 1 )
texture = ExtResource( 30 )

[node name="Eye-recolor3" type="Sprite" parent="."]
visible = false
modulate = Color( 0.376471, 0.105882, 0, 1 )
texture = ExtResource( 30 )

[node name="Happy" type="Sprite" parent="."]
texture = ExtResource( 8 )

[node name="Mouth1" type="Sprite" parent="."]
visible = false
texture = ExtResource( 19 )

[node name="Mouth2" type="Sprite" parent="."]
visible = false
texture = ExtResource( 16 )

[node name="Mouth3" type="Sprite" parent="."]
visible = false
texture = ExtResource( 17 )

[node name="Mouth4" type="Sprite" parent="."]
texture = ExtResource( 18 )

[node name="Nose1" type="Sprite" parent="."]
visible = false
texture = ExtResource( 24 )

[node name="Nose2" type="Sprite" parent="."]
texture = ExtResource( 25 )

[node name="Sad" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="Surprised" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="GreenShirt" type="Sprite" parent="."]
modulate = Color( 0.360784, 0.705882, 0.431373, 1 )
texture = ExtResource( 15 )

[node name="OrangeShirt" type="Sprite" parent="."]
visible = false
modulate = Color( 0.952941, 0.552941, 0.129412, 1 )
texture = ExtResource( 15 )

[node name="BubblegumShirt" type="Sprite" parent="."]
visible = false
modulate = Color( 0.909804, 0.568627, 0.768627, 1 )
texture = ExtResource( 15 )

[node name="Scarf" type="Sprite" parent="."]
visible = false
texture = ExtResource( 12 )

[node name="Scarf2" type="Sprite" parent="."]
visible = false
texture = ExtResource( 31 )

[node name="Scarf1" type="Sprite" parent="."]
visible = false
modulate = Color( 0.909804, 0.568627, 0.768627, 1 )
texture = ExtResource( 32 )

[node name="Glasses" type="Sprite" parent="."]
visible = false
texture = ExtResource( 14 )

[node name="Hat" type="Sprite" parent="."]
visible = false
position = Vector2( -2.5, 0 )
texture = ExtResource( 13 )

[node name="Hat2" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -27.5 )
texture = ExtResource( 33 )

[node name="Earrings1" type="Sprite" parent="."]
visible = false
texture = ExtResource( 22 )

[node name="Earrings2" type="Sprite" parent="."]
visible = false
texture = ExtResource( 20 )

[node name="Earrings3" type="Sprite" parent="."]
visible = false
texture = ExtResource( 21 )

[node name="Earrings4" type="Sprite" parent="."]
visible = false
texture = ExtResource( 23 )
